objects/Job_Opening__c.object
<CustomObject>
    <fields>
        <fullName>Department__c</fullName>
        <label>Department</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Finance Department</fullName>
                </value>
                <value>
                    <fullName>HR Department</fullName>
                </value>
                <value>
                    <fullName>Technical Department</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Designation__c</fullName>
        <label>Designation</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_Id__c</fullName>
        <displayFormat>A-{0000}</displayFormat>
        <label>Job Id</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Job_Status__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Job Status</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Required_Qualification__c</fullName>
        <label>Required Qualification</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Salary__c</fullName>
        <label>Salary</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Job Opening</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Job Opening Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Job Openings</pluralLabel>
    <recordTypes>
        <fullName>External_Department</fullName>
        <active>true</active>
        <label>External Department</label>
    </recordTypes>
    <recordTypes>
        <fullName>Internal_Department</fullName>
        <active>true</active>
        <label>Internal Department</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>